# building-a-semantic-layer

./: .gitignore  README.md  SEMANTIC_LAYER_LOGIC.md  main.py  pyproject.toml
ecommerce_semantic/: dbt_project.yml
ecommerce_semantic/models/marts/: customers_mart.sql  orders_mart.sql  products_mart.sql
ecommerce_semantic/models/staging/: sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
queries/: example_queries.py
scripts/: load_data.py  verify.py
semantic/: __init__.py  engine.py  metrics.yaml
